Included an ORM to handle database transactions (Realm); Created Presenter (MainActivityPresenter) class to build all the data behind MainActivity class; Changed UserScope name to AppScope (Makes more sense, because in this app there won't be distinct users); Renamed the view touch interface from OnViewTouched to OnViewTouchListener; Fixed the GsonConverterFactory at ApiModule class to be able to parse correctly Realm Objects.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
 
     <data>
         <variable
-            name="touchListener"
-            type="com.okawa.pedro.galleryapp.util.OnViewTouched"/>
+            name="viewTouchListener"
+            type="com.okawa.pedro.galleryapp.util.OnViewTouchListener"/>
     </data>
 
     <LinearLayout
