--- a/app/src/main/res/layout/adapter_main_images.xml
+++ b/app/src/main/res/layout/adapter_main_images.xml
@@ -4,6 +4,14 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/ivAdapter"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:scaleType="centerCrop"/>
+
+    </LinearLayout>
 
 </layout>
