--- a/app/src/main/res/layout/adapter_main.xml
+++ b/app/src/main/res/layout/adapter_main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="imageData"
+            type="greendao.ImageData"/>
+    </data>
+
     <FrameLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -15,14 +21,35 @@
             android:id="@+id/ivAdapterMainImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"/>
+            android:scaleType="center"/>
 
-        <RelativeLayout
-            android:id="@+id/rlInfo"
+        <LinearLayout
+            android:id="@+id/llAdapterMainDetails"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal|bottom"
-            android:background="@android:color/darker_gray"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:background="@color/color_black_alpha_55">
+
+            <ImageView
+                android:id="@+id/ivAdapterMainType"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_margin="2dp"
+                android:scaleType="centerCrop"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textSize="24sp"
+                android:layout_margin="4dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_gravity="center_vertical"
+                android:text="@{imageData.description}"/>
+
+        </LinearLayout>
 
     </FrameLayout>
 
