--- a/app/src/main/res/layout/adapter_main.xml
+++ b/app/src/main/res/layout/adapter_main.xml
@@ -21,33 +21,34 @@
             android:id="@+id/ivAdapterMainImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="center"/>
+            android:scaleType="centerCrop"/>
 
         <LinearLayout
-            android:id="@+id/llAdapterMainDetails"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
-            android:background="@color/color_black_alpha_55">
+            android:background="@color/color_image_details"
+            android:weightSum="10">
+
+            <TextView
+                android:id="@+id/tvAdapterMainId"
+                style="@style/AppTextView"
+                android:layout_gravity="start|center_vertical"
+                android:layout_margin="@dimen/adapter_main_details_margin"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_weight="9"/>
 
             <ImageView
                 android:id="@+id/ivAdapterMainType"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_margin="2dp"
-                android:scaleType="centerCrop"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="24sp"
-                android:layout_margin="4dp"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_gravity="center_vertical"
-                android:text="@{imageData.description}"/>
+                android:layout_width="@dimen/adapter_main_icon_type_size"
+                android:layout_height="@dimen/adapter_main_icon_type_size"
+                android:layout_margin="@dimen/adapter_main_icon_type_margin"
+                android:layout_gravity="end|center_vertical"
+                android:scaleType="center"
+                android:layout_weight="1"/>
 
         </LinearLayout>
 
