--- a/app/src/main/res/layout/navigation_footer.xml
+++ b/app/src/main/res/layout/navigation_footer.xml
@@ -16,6 +16,8 @@
         android:background="@drawable/background_touchable"
         android:onClick="@{onViewTouchListener.onViewTouched}">
 
+        <!-- GITHUB BUTTON -->
+
         <TextView
             style="@style/AppTextView"
             android:layout_gravity="center"
