--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -6,6 +6,8 @@
     android:layout_alignParentTop="true"
     android:background="@color/color_primary_dark">
 
+    <!-- UPDAY LOGO -->
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,6 +15,8 @@
         android:layout_marginTop="@dimen/navigation_view_header_content_margin_top"
         android:scaleType="center"
         android:src="@mipmap/ic_launcher"/>
+
+    <!-- UPDAY TEXT -->
 
     <TextView
         style="@style/AppTextView"
