--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,10 @@
         <variable
             name="onViewTouchListener"
             type="com.okawa.pedro.galleryapp.util.listener.OnViewTouchListener"/>
+
+        <variable
+            name="loading"
+            type="boolean"/>
     </data>
 
     <android.support.v4.widget.DrawerLayout
@@ -38,10 +42,18 @@
 
             </android.support.v4.widget.SwipeRefreshLayout>
 
+            <!-- LOADING LAYOUT (IT SHOW WHEN THE LIST IS EMPTY) -->
+
+            <include
+                android:id="@+id/loadingLayout"
+                layout="@layout/view_initial_loading"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                bind:visible="@{loading}"/>
+
             <!-- TOOLBAR -->
 
             <android.support.v7.widget.Toolbar
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/toolbar"
                 android:layout_height="@dimen/abc_action_bar_default_height_material"
                 android:layout_width="match_parent"
