--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/color_accent">
+            android:background="@color/color_primary">
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/srActivityMainImages"
