--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@color/color_primary_dark"
+        android:background="@color/color_accent"
         android:onClick="@{onViewTouchListener.onViewTouched}">
 
         <!-- UPDAY LOGO -->
