Implemented Instrumentation tests;

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -16,6 +16,7 @@
     </data>
 
     <ScrollView
+        android:id="@+id/svActivityDetails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_primary">
