--- a/app/src/main/res/layout/navigation_footer.xml
+++ b/app/src/main/res/layout/navigation_footer.xml
@@ -19,13 +19,14 @@
         <!-- GITHUB BUTTON -->
 
         <TextView
-            style="@style/AppTextView"
+            style="@style/AppTextViewSmall"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_margin="@dimen/navigation_view_footer_text_margin"
             android:drawablePadding="@dimen/navigation_view_footer_drawable_padding"
             android:drawableStart="@mipmap/ic_github"
-            android:text="@string/navigation_view_footer_text"/>
+            android:text="@string/navigation_view_footer_text"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 </layout>
