--- a/app/src/main/res/layout/adapter_type.xml
+++ b/app/src/main/res/layout/adapter_type.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/adapter_type_item_margin"
-        android:weightSum="10">
+        android:background="?attr/selectableItemBackground">
 
-        <TextView
-            android:id="@+id/tvAdapterType"
-            style="@style/AppTextView"
-            android:layout_gravity="start|center_vertical"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textAllCaps="true"
-            android:layout_weight="9"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/adapter_type_item_margin">
 
-        <ImageView
-            android:id="@+id/ivViewImageType"
-            android:layout_width="@dimen/adapter_type_icon_type_size"
-            android:layout_height="@dimen/adapter_type_icon_type_size"
-            android:layout_margin="@dimen/adapter_type_icon_type_margin"
-            android:layout_gravity="end|center_vertical"
-            android:scaleType="center"
-            android:layout_weight="1"/>
+            <ImageView
+                android:id="@+id/ivViewImageType"
+                android:layout_width="@dimen/adapter_type_icon_type_size"
+                android:layout_height="@dimen/adapter_type_icon_type_size"
+                android:layout_margin="@dimen/adapter_type_icon_type_margin"
+                android:layout_gravity="center_vertical"
+                android:scaleType="center"/>
+
+            <TextView
+                android:id="@+id/tvAdapterType"
+                style="@style/AppTextViewSmall"
+                android:textColor="@color/color_accent"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textAllCaps="true"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
